--- a/TestTaringa.html
+++ b/TestTaringa.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/> <!--320-->
 		<link rel="stylesheet" href="TestTaringa.css" />
 		
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
