--- a/TestTaringa.html
+++ b/TestTaringa.html
@@ -7,6 +7,10 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.1/jquery-ui.min.js"></script>
 		
+		<script type="text/javascript" src="jquery.ui.touch-punch.min.js"></script>
+		
+		
+		
 	</head>
 	<body>
 		<div id="main-container">
